--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
-<div class="container">
+  <div class="container content-wrapper">
+  <app-spinner *ngIf="loading$ | async"></app-spinner>
+
   <router-outlet></router-outlet>
 </div>
 
